Fix notes page card spacing: add box-sizing and width to match task list
笔记卡片两边间距不一致，原因是 .notes-list 缺少 box-sizing: border-box
和 width: 100%，而 .task-list 有这两个属性。小程序 ScrollView 在
content-box 模式下 padding 计算方式不同，导致视觉上左右不对称。

--- a/miniprogram/src/pages/notes/index.scss
+++ b/miniprogram/src/pages/notes/index.scss
@@ -54,10 +54,11 @@
 .notes-list {
   height: calc(100vh - 300px);
   padding: 0 24px;
+  box-sizing: border-box;
+  width: 100%;
 }
 
 .note-card {
-  margin-bottom: 20px;
 }
 
 .note-header {
